# material-eval-app

./: .env.example  .gitignore  CLAUDE.md  README.md  app.py  db_connector.py  pyproject.toml  rag_engine.py  requirements.txt
.playwright-mcp/: page-2026-05-12T10-07-17-774Z.yml  page-2026-05-12T10-07-33-270Z.yml  page-2026-05-12T10-08-24-891Z.yml  page-2026-05-12T10-08-42-044Z.yml
docs/: HANDOFF.md  implementation-log.md  material-eval-refactor-prd.md  supabase-production-schema.md  target-architecture-v1.md  产品说明-大白话版.md
knowledge_base/: test.txt  人形机器人关节连杆减重白皮书.txt  军工装甲材料准入标准_2025.txt  工艺保密规范_V2.txt
legacy/: app_legacy_streamlit.py
material_eval/: __init__.py  alternatives.py  artifacts.py  blueprint_3d.py  catalog.py  computation.py  conditions.py  eight_dim_analysis.py  embeddings.py  evaluation.py  evidence.py  evidence_store.py  failure_criteria.py  ingestion.py  laminates.py  llm_provider.py  material_property_library.py  materials.py  openai_provider.py  rag_eval.py  report_schema.py  reporting.py  scoring.py  section_analysis.py  storage.py  strength.py  stress_analysis.py  ui_streamlit.py  uncertainty.py  units.py  web_search.py
tests/: test_alternatives.py  test_artifacts.py  test_catalog.py  test_computation.py  test_conditions.py  test_embeddings.py  test_envelope.py  test_evaluation_workflow.py  test_evidence_reporting_storage.py  test_evidence_store.py  test_failure_criteria.py  test_ingestion.py  test_laminates.py  test_material_property_library.py  test_materials.py  test_phase1_smoke.py  test_phase2_smoke.py  test_rag_eval.py  test_scoring.py  (+10 more)
(+7 files in other folders)
